
Bug fixes:
....I..... [ZBX-11335] added MariaDB database support when compiling with --with-mysql configuration option; thanks to Dmitry Smirnov for patch (viktors)
.......PS. [ZBX-11036] fixed server not to synchronize IPMI configuration for new hosts without IPMI (vso)

--------------------------------------------------------------------------------
Changes for 3.2.2rc1

New features:
A.......S. [ZBXNEXT-3457] added support of user macros for trigger tags; dropped forward slash restriction in "Tag name" and "Tag for matching" (Sasha, vso)
........S. [ZBX-10694] added rollup health sensor item to vmware hypervisor template (wiper)
........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)

Bug fixes:
....I..... [ZBX-11335] added MariaDB database support when compiling with --with-mysql configuration option; thanks to Dmitry Smirnov for patch (vikotrs)
...G...PS. [ZBX-11122] fixed comparisons between signed and unsigned integer expressions to eliminate build warnings (Sergejs)
.......PS. [ZBX-11326] fixed processing of web monitoring scenario level variables (wiper)
A......... [ZBX-10842] fixed sql error when updating httptest with applicationid and without httpstepid parameters (Cemeris)
A......... [ZBX-10842] prevented disappearing of step items when updating httptest without applicationid, httpstepid parameters (Cemeris)
A......... [ZBX-10842] fixed connecting web scenario applicationid to created steps when updating with API httptest.update mehtod (Cemeris)
..F....... [ZBX-9656] prevented updating comments for discovered triggers (Ivo)
..F....PS. [ZBX-11221] fixed MySQL connection issue by overriding user defined auto commit setting (Oleg, vso)
A......... [ZBX-11291] fixed LLD rule not validating "lifetime" field (Ivo)
..F....... [ZBX-11329] fixed host scripts pop-up menu not being displayed in Monitoring -> Problems section (Ivo)
..F....... [ZBX-11209] fixed visual bugs in various browsers (Pavel, Sasha)